--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/hemanthk313/testproxyserver#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bull": "^3.10.0",
     "express": "^4.17.1",
     "redbird": "^0.9.0"
   }
